Changes Made: -Plaid Hook now being used in Update mode to prevent new Access Tokens being Administered -Fixed Bug when Switching between Home and Stocks Table -Added Delete Button Functionality with Modal (Will add Functionality Later) -UI Changes